2009-11-30  Gavin Barraclough  <barraclough@apple.com>

        Windows Build fix.  Reviewed by NOBODY.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2009-11-24  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Geoff Garen.

        Bug 31859 - Make world selection for JSC IsolatedWorlds automagical.

        WebCore presently has to explicitly specify the world before entering into JSC,
        which is a little fragile (particularly since property access via a
        getter/setter might invoke execution). Instead derive the current world from
        the lexical global object.
        
        Remove the temporary duct tape of willExecute/didExecute virtual hooks on the JSGlobalData::ClientData - these are no longer necessary.

        * API/JSBase.cpp:
        (JSEvaluateScript):
        * API/JSObjectRef.cpp:
        (JSObjectCallAsFunction):
        * JavaScriptCore.exp:
        * runtime/JSGlobalData.cpp:
        * runtime/JSGlobalData.h:

2009-11-30  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Remove obsolete PLATFORM(KDE) code
        https://bugs.webkit.org/show_bug.cgi?id=31958

        KDE is now using unpatched QtWebKit.

        * parser/Lexer.cpp: Remove obsolete KDE_USE_FINAL guard
        * wtf/Platform.h: Remove PLATFORM(KDE) definition and code 
        section that is guarded with it.

2009-11-30  Jan-Arve Sæther  <jan-arve.saether@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix compilation with win32-icc

        The Intel compiler does not support the __has_trivial_constructor type
        trait.  The Intel Compiler can report itself as _MSC_VER >= 1400. The
        reason for that is that the Intel Compiler depends on the Microsoft
        Platform SDK, and in order to try to be "fully" MS compatible it will
        "pretend" to be the same MS compiler as was shipped with the MS PSDK.